<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_remind"
        android:icon="@drawable/icon_action_view_note_remind"
        android:title="@string/menu_remind"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_note"
        android:icon="@drawable/icon_action_edit_note_white"
        android:title="@string/menu_edit_note"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_menu_font_size"
        android:orderInCategory="100"
        android:title="@string/menu_font_size"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_menu_note_msg"
        android:orderInCategory="100"
        android:title="@string/menu_note_msg"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_menu_delete_note"
        android:orderInCategory="100"
        android:title="@string/menu_delete_note"
        app:showAsAction="never" />



    <item
        android:id="@+id/action_menu_search_in_note"
        android:orderInCategory="100"
        android:title="@string/menu_search_in_note"
        app:showAsAction="never" />


</menu>
