<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/icon_action_undo"
        android:title="@string/menu_undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/icon_action_redo"
        android:title="@string/menu_redo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_menu_save_note"
        android:orderInCategory="100"
        android:title="@string/menu_save_note"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_menu_cancel_edit"
        android:orderInCategory="100"
        android:title="@string/menu_edit_cancel"
        app:showAsAction="never" />
</menu>
