<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit_note"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/background_circular_progress_button_true"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolBarTheme"
        />


    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_note_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/note_title"
            android:inputType="text"
            android:autofillHints="@string/note_title"
            />


    </LinearLayout>

    <EditText
        android:id="@+id/edt_note_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/note_content"/>


    <RelativeLayout
        android:id="@+id/relative_edit_bottom_tool"
        android:layout_width="match_parent"
        android:layout_height="48.0dip"
        android:gravity="center_vertical"
        android:layout_marginBottom="5dp"
        android:padding="12.0dip">

        <ImageView
            android:id="@+id/img_tool_keyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/edit_icon_keyboard"/>



        <ImageView
            android:id="@+id/img_tool_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/img_tool_font"
            android:contentDescription="@string/app_name"
            android:src="@drawable/edit_icon_todo_unchecked"/>

        <ImageView
            android:id="@+id/img_tool_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/img_tool_record"
            android:contentDescription="@string/app_name"
            android:src="@drawable/edit_icon_font_unchecked"/>

        <ImageView
            android:id="@+id/img_tool_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/img_tool_photo"
            android:contentDescription="@string/app_name"
            android:src="@drawable/edit_icon_record_unchecked"/>

        <ImageView
            android:id="@+id/img_tool_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/img_tool_camera"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/edit_icon_photo_unchecked"/>

        <ImageView
            android:id="@+id/img_tool_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="17dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/edit_icon_camera_unchecked"/>
    </RelativeLayout>
</LinearLayout>